--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ remote_theme: pages-themes/merlot@v0.2.0
 plugins:
   - jekyll-sitemap
   - jekyll-remote-theme
+
+title: [Pinehurst 2025 Leaderboard]
+description: [A "live" leaderboard for 2025]
